--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,21 @@
 {
-  "version": 2,
   "builds": [
     {
       "src": "api/index.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "50mb",
+        "includeFiles": [
+          "views/**/*",
+          "routers/**/*",
+          "data_extraction/**/*"
+        ],
+        "excludeFiles": [
+          "env/**/*",
+          "__pycache__/**/*",
+          "assets/**/*"
+        ]
+      }
     }
   ],
   "routes": [
