--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,8 @@
         "includeFiles": [
           "views/**/*",
           "routers/**/*",
-          "data_extraction/**/*"
+          "data_extraction/**/*",
+          "data_extraction/data/*"
         ],
         "excludeFiles": [
           "env/**/*",
